Created html file

--- a/notebooks/sanjose_flood.ipynb
+++ b/notebooks/sanjose_flood.ipynb
@@ -1083,25 +1083,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook sanjose_flood.ipynb to markdown\n",
-      "/opt/conda/share/jupyter/nbconvert/templates/base/display_priority.j2:32: UserWarning: Your element with mimetype(s) dict_keys(['application/javascript', 'application/vnd.holoviews_load.v0+json']) is not able to be represented.\n",
-      "  {%- elif type == 'text/vnd.mermaid' -%}\n",
-      "/opt/conda/share/jupyter/nbconvert/templates/base/display_priority.j2:32: UserWarning: Your element with mimetype(s) dict_keys([]) is not able to be represented.\n",
-      "  {%- elif type == 'text/vnd.mermaid' -%}\n",
-      "[NbConvertApp] Writing 983345 bytes to sanjose_flood.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "%%bash\n",
-    "jupyter nbconvert sanjose_flood.ipynb --to markdown --no-input"
+    "jupyter nbconvert sanjose_flood.ipynb --to html --no-input"
    ]
   }
  ],
