Added new images

--- a/notebooks/sanjose_flood.ipynb
+++ b/notebooks/sanjose_flood.ipynb
@@ -19,11 +19,15 @@
    },
    "source": [
     "# The 2017 flooding in San Jose, California in a historical context\n",
-    "![Flooding in a central San Jose neighborhood, Feb. 21, 2017](https://ww2.kqed.org/app/uploads/sites/10/2017/02/RS24298_IMG_6647-qut-2-1180x885.jpg)\n",
+    "![Flooding at Coyote Creek in Hellyer County Park, San Jose, CA](https://live.staticflickr.com/65535/53200407673_8c7a63c0c4_c.jpg)\n",
     "\n",
-    "[Flooding]()\n",
+    "*Flooding at Coyote Creek in Hellyer County Park, San Jose, CA. Jan 22, 2017.*\n",
     "\n",
-    "> Image source: <a src=/> [Peter Jon Shuler for KQED](https://www.kqed.org/news/11328162/san-jose-flooding-14000-told-to-evacuate)</a>"
+    "![Floodwater overtopping the spillway at Anderson Dam, Morgan Hill, CA](https://live.staticflickr.com/65535/53200407653_c307bb4a96_c.jpg)\n",
+    "\n",
+    "*Floodwater overtopping the spillway at Anderson Dam, Morgan Hill, CA. Feb 19, 2017.*\n",
+    "\n",
+    "> [Advyth Ramachandran via Flickr](https://www.flickr.com/people/advyth/)"
    ]
   },
   {
