Created HTML file for urban forest NDVI analysis

--- a/notebooks/sanjose_urbanforest.ipynb
+++ b/notebooks/sanjose_urbanforest.ipynb
@@ -2810,6 +2810,17 @@
     "\n",
     "Peak greenness NDVI dropped 0.15 inside the boundary of the Camp Fire. However, NDVI does not allow us to distinguish between regrowth of forest vegetation or conversion of forest to shrubland or grassland. It is possible that the forest will take longer to recover, or may never recover."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "%%bash\n",
+    "jupyter nbconvert sanjose_urbanforest.ipynb --to html --no-input"
+   ]
   }
  ],
  "metadata": {
